# simple-test-api

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: ci.yml
modules/simple-test-api/: default.nix
src/: lib.rs  main.rs  mem_db.rs  startup.rs
src/routes/: get_voucher.rs  mod.rs  sync_voucher.rs  sync_voucher_cash_desk.rs
