[package]
name = "simple-test-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "simple-test-api"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
actix-web = "4.8.0"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
